minor fixes with cta overflowing

--- a/styles/style.css
+++ b/styles/style.css
@@ -426,8 +426,8 @@ img {
 .banner-wrapper {
   position: relative;
   width: 100%;
-  height: 200px; /* Set a fixed height for the banner */
-  overflow-x: hidden;
+  height: 250px; /* Set a fixed height for the banner */
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
